<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Blackjack Square</string>
    <string name="version">v1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help">Help</string>

    <string name="score_text">Score: <xliff:g id="score">%s</xliff:g></string>
    <string name="discards_text">Discards</string>
    <string name="table_text">Table</string>
    <string name="back_alertdialog_title">Back to Menu</string>
    <string name="back_alertdialog_msg">Do you want to abandon current game?</string>

    <string name="help_text0">
        <![CDATA[<br /><br />
        <i><b>GOAL</b></i><br />
        Build multiple Blackjack hands to score as many points as possible.<br /><br />
        <i><b>THE DEAL</b></i><br />
        The table starts the game empty. The Stock flips over one card.<br /><br />
        <i><b>STOCK</b></i><br />
        The face up card near the Stock must be played to a place in the Blackjack hands or a Discard Pile.
        As each card is played, the Stock will automatically flip another card.<br />
        ]]>
        </string>

    <string name="help_text1">
        <![CDATA[<br /><br />
        <i><b>LAYOUT</b></i><br />
        The 16 spaces may hold one card each. The spaces form nine hands of from 2 to 5 cards each depending on the position of the spaces.
        There are two hands of 2 cards, two hands of 3 cards, three hands of 4 cards, and two hands of 5 cards.<br /><br />
        <i><b>DISCARDS</b></i><br />
        There are four spaces where cards may be placed that are not wanted in the Blackjack hands. Each space may hold one card.<br /><br />
        ]]>
    </string>

    <string name="help_text2">
        <![CDATA[<br /><br />
        <i><b>SCORING</b></i><br />
        Scoring for the various Blackjack hands is based on how close the player comes to 21 in each hand. Face cards count as 10. Aces can count as either 1 or 11.<br /><br />
        Each of the nine hands are scored as follows:<br /><br />

        -----------------------------------<br />
        <i>10 Points: </i> Blackjack! A Blackjack is two cards that total 21. A King, Queen, Jack, or 10 combined with an Ace<br />
        <i>7 Points : </i> All cards in hand that total 21<br />
        <i>5 Points : </i> Total 20<br />
        <i>4 Points : </i> Total 19<br />
        <i>3 Points : </i> Total 18<br />
        <i>2 Points : </i> Total 17<br />
        <i>1 Point  : </i> Total 16 or less<br />
        <i>0 Point  : </i> Bust! Total 22 or more<br />
        -----------------------------------<br />
        The scores from all nine hands are added together to arrive at the final score.<br />
        ]]>
    </string>

    <string name="help_text3">
        <![CDATA[<br /><br />
        <i><b>ABOUT</b></i><br /><br />
        Blackjack Square is a SoliTaire! Network original created by Warren Schwader.<br />
        <br />
        The author created this application based on the Blackjack Square game rules.
        Should you find any bug or have any advice, please feel free to contact author at besttth6@gmail.com.<br />
        <br />
        Enjoy!
        ]]>
    </string>

    <string name="title_activity_game" translatable="false">GameActivity</string>

    <!-- SHARE DIALOG -->
    <string name="dialog_text">Your final score is <b><xliff:g id="score">%s</xliff:g></b>! Good job!</string>
    <string name="low_score_dialog_text">Your final score is <b><xliff:g id="score">%s</xliff:g></b>.</string>
    <string name="new_high_score_dialog_text">Congratulations! New high score: <b><xliff:g id="score">%s</xliff:g>!</b></string>
    <string name="restart">NEW GAME</string>
    <string name="back">BACK</string>
    <string name="share_content">I just scored <b><xliff:g id="score">%s</xliff:g></b> points in the game #BlackjackSquare !</string>
    <string name="share_from">Share from</string>
    <string name="app_not_install"><xliff:g id="app_name">%s</xliff:g> App is not installed.</string>

    <string name="facebook_app_id" translatable = "false">867541743343194</string>

    <!-- LEADER BOARD -->
    <string name="high_score_title"><b>HIGH SCORES</b></string>
    <string name="average_score_title">AVERAGE SCORE</string>
    <string name="total_game_title">TOTAL GAMES</string>
    <string name="no_record">no record</string>
    <string name="button_reset_statistics">RESET STATISTICS</string>

    <!-- SETTINGS -->
    <string name="choose_background_setting_text"><b>THEME</b></string>
    <string name="setting_ic_green_text">Classic Casino</string>
    <string name="setting_ic_blue_text">Poker Table</string>
    <string name="setting_ic_wood_text">Wood</string>
    <string name="setting_ic_metal_text">Full Metal</string>
    <string name="setting_button_text">APPLY</string>

</resources>
