<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@drawable/light_grey"
    tools:context="com.example.guanqing.solblackjack.Main.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/fragment_half_margin"
                android:layout_marginBottom="@dimen/fragment_half_margin"
                android:textColor="@color/text_white"
                android:text="@string/choose_background_setting_text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioButton_group_container"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_button_height"
                    android:text="@string/setting_ic_green_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@drawable/setting_green_ic"
                    android:textColor="@color/text_white"
                    android:id="@+id/set_green_radioButton"
                    android:checked="true"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_button_height"
                    android:text="@string/setting_ic_blue_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_white"
                    android:background="@drawable/setting_blue_ic"
                    android:id="@+id/set_blue_radioButton" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/setting_button_height"
                    android:text="@string/setting_ic_wood_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_white"
                    android:background="@drawable/setting_wood_ic"
                    android:id="@+id/set_wood_radioButton" />
            </RadioGroup>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_button_text"
                android:layout_gravity="center_horizontal"
                android:id="@+id/setting_button" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
