<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.guanqing.solblackjack.Main.LeaderboardFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/leaderboard_scrollview_height"
        android:id="@+id/leaderboard_scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:gravity="center"
                style="?android:textAppearanceLarge"
                android:layout_marginBottom="@dimen/fragment_half_margin"
                android:text="@string/high_score_title"
                android:textStyle="bold" />

            <TextView style="?android:textAppearanceMedium"
                android:lineSpacingMultiplier="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/high_scores"
                android:gravity="center"
                android:text="@string/high_score_title" />


            <TableRow android:layout_height="2dp"
                android:background="@color/color1"
                android:layout_marginTop="@dimen/fragment_half_margin"
                android:layout_marginBottom="@dimen/fragment_half_margin"
                android:layout_width="match_parent">
            </TableRow>

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="?android:textAppearanceMedium"
                android:text="@string/average_score_title"
                android:textStyle="bold" />

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/average_score"
                android:gravity="center"
                android:text="@string/average_score_title" />


            <TableRow android:layout_height="2dp"
                android:layout_marginTop="@dimen/fragment_half_margin"
                android:layout_marginBottom="@dimen/fragment_half_margin"
                android:background="@color/color2"
                android:layout_width="match_parent">
            </TableRow>

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="?android:textAppearanceMedium"
                android:text="@string/total_game_title"
                android:textStyle="bold" />

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/total_games_num"
                android:gravity="center"
                android:text="@string/total_game_title" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset_statistics"
        android:layout_marginTop="@dimen/fragment_half_margin"
        android:layout_gravity="bottom|center_horizontal"
        android:id="@+id/reset_button" />

</LinearLayout>
