<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/background_gray"
    tools:context="com.blackjacksquare.guanqing.solblackjack.Game.ResultFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/result_frag_scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:id="@+id/dialog_textview"
                android:text="@string/dialog_text" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fragment_double_margin"
                android:gravity="end">

                <ImageView
                    android:layout_width="@dimen/share_icon_size"
                    android:layout_height="@dimen/share_icon_size"
                    android:padding="@dimen/fragment_inner_padding"
                    android:background="@null"
                    android:id="@+id/fb_share_imageview"
                    android:src="@drawable/facebook_icon"
                    android:layout_gravity="center_horizontal|top" />

                <ImageView
                    android:layout_width="@dimen/share_icon_size"
                    android:layout_height="@dimen/share_icon_size"
                    android:padding="@dimen/fragment_inner_padding"
                    android:background="@null"
                    android:id="@+id/tweet_imageview"
                    android:src="@drawable/tweeter_icon" />

                <ImageView
                    android:layout_width="@dimen/share_icon_size"
                    android:layout_height="@dimen/share_icon_size"
                    android:padding="@dimen/fragment_inner_padding"
                    android:background="@null"
                    android:id="@+id/share_imageview"
                    android:src="@drawable/share_icon" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal"
                android:layout_marginTop="@dimen/result_frag_mid">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/restart"
                    android:id="@+id/restart_button" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:id="@+id/back_button" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
