<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:id="@+id/game_frag_container"
    android:background="@drawable/green"
    tools:context="com.example.guanqing.solblackjack.Game.GameActivityFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <ImageView
                android:layout_width="@dimen/back_width"
                android:layout_height="@dimen/back_height"
                android:padding="@dimen/fragment_inner_padding"
                android:layout_gravity="center_vertical"
                android:id="@+id/deck_imageView"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:id="@+id/deal_imageView"
                android:padding="@dimen/fragment_inner_padding"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ce" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/table_font_size"
                    android:text="@string/discards_text"
                    android:typeface="monospace"
                    android:textColor="@color/text_black"
                    android:id="@+id/discards_textView"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="1">

                    <ImageView
                        android:layout_width="@dimen/card_width"
                        android:layout_height="@dimen/card_height"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:padding="@dimen/fragment_inner_padding"
                        android:id="@+id/discard1"
                        android:src="@drawable/ce"/>

                    <ImageView
                        android:layout_width="@dimen/card_width"
                        android:layout_height="@dimen/card_height"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:padding="@dimen/fragment_inner_padding"
                        android:id="@+id/discard2"
                        android:src="@drawable/ce"/>

                    <ImageView
                        android:layout_width="@dimen/card_width"
                        android:layout_height="@dimen/card_height"
                        android:layout_row="0"
                        android:layout_column="2"
                        android:padding="@dimen/fragment_inner_padding"
                        android:id="@+id/discard3"
                        android:src="@drawable/ce"
                        />

                    <ImageView
                        android:layout_width="@dimen/card_width"
                        android:layout_height="@dimen/card_height"
                        android:layout_row="0"
                        android:layout_column="3"
                        android:padding="@dimen/fragment_inner_padding"
                        android:id="@+id/discard4"
                        android:src="@drawable/ce"
                        />

                </GridLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/table_font_size"
        android:layout_marginTop="@dimen/fragment_half_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/table_text"
        android:typeface="monospace"
        android:textColor="@color/text_black"
        android:id="@+id/table_textView"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:rowCount="4"
        android:columnCount="5">

        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand1"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="0"
            android:layout_column="1"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand2"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="0"
            android:layout_column="2"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand3"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="0"
            android:layout_column="3"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand4"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="0"
            android:layout_column="4"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand5"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand6"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="1"
            android:layout_column="1"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand7"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="1"
            android:layout_column="2"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand8"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="1"
            android:layout_column="3"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand9"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="1"
            android:layout_column="4"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand10"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="2"
            android:layout_column="1"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand11"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="2"
            android:layout_column="2"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand12"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="2"
            android:layout_column="3"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand13"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="3"
            android:layout_column="1"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand14"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="3"
            android:layout_column="2"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand15"
            android:src="@drawable/ce"
            />
        <ImageView
            android:layout_width="@dimen/card_width"
            android:layout_height="@dimen/card_height"
            android:layout_row="3"
            android:layout_column="3"
            android:padding="@dimen/fragment_inner_padding"
            android:id="@+id/hand16"
            android:src="@drawable/ce"
            />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score_text"
        android:id="@+id/score_textView"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:typeface="serif" />

</LinearLayout>
